<resources>
    <string name="app_name">ICOC Demo</string>
    <string name="device_setup">Device Setup</string>
    <string name="add_devices">Add Devices</string>
    <string name="scan">SCAN</string>
    <string name="stop_scan">STOP</string>
    <string name="start_scan">START SCAN</string>
    <string name="settings_dialog_title">ज़रूरी अनुमति</string>
    <string name="rssi_s">RSSI :- %s</string>
    <string name="content_text" translatable="false">\n Please enable permission to proceed in the app.
To enable, click on Permissions > Location and Phone one by one > click on "Allow only while using the app".</string>
    <string name="device_name">Device Name</string>
    <string name="enter_device_name">Enter device name</string>
    <string name="mac_id">Mac Id: </string>
    <string name="machine_type">Machine Type: </string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="adult_weighing_machine">ADULT WEIGHING MACHINE</string>
    <string name="blood_pressure">BLOOD PRESSURE</string>
    <string name="read">READ</string>
    <string name="kg_value">Value: %s kgs</string>
    <string name="no_weighing_machines_found">No Weighing Machines Found!</string>
    <string name="no_bp_machines_found">No BP Machines Found!</string>
    <string name="systolic">Systolic :</string>
    <string name="diastolic">Diastolic :</string>
    <string name="pulse">Pulse :</string>
    <string name="pulse_monitor">Pulse Monitor</string>
    <string name="no_oximeters_found">No oximeters found!</string>
    <string name="spo2">SpO2:</string>
</resources>