<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="108dp"
        android:background="@color/material_deep_teal_20"
        android:padding="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_diaSetUpDevice_title"
            style="@style/text_body_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_setup"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/cl_diaSetUpDevice_deviceName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_diaSetUpDevice_deviceName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_diaSetUpDevice_title">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_diaSetUpDevice_deviceNameTitle"
                style="@style/text_body_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_diaSetUpDevice_deviceName"
                style="@style/InputTextOutLine"
                android:layout_width="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_device_name"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_diaSetUpDevice_deviceNameTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_diaSetUpDevice_deviceName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:inputType="text"
                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_diaSetUpDevice_deviceMacId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_diaSetUpDevice_deviceName">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_diaSetUpDevice_deviceMacId"
                style="@style/text_body_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mac_id"
                android:textColor="@color/black"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_diaSetUpDevice_setDeviceMacId"
                style="@style/text_body_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_diaSetUpDevice_deviceMacId"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="25:89:fs:oi:jo:Jo:jo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_diaSetUpDevice_deviceDataType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_diaSetUpDevice_deviceMacId">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_diaSetUpDevice_deviceMachineType"
                style="@style/text_body_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_type"
                android:textColor="@color/black"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_diaSetUpDevice_setDeviceMachineType"
                style="@style/text_body_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/tv_diaSetUpDevice_deviceMachineType"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Adult Weight" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_diaSetUpDevice_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cl_diaSetUpDevice_deviceDataType" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mb_diaSetUpDevice_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:text="@string/ok"
            app:layout_constraintEnd_toStartOf="@+id/mb_diaSetUpDevice_cancel"
            app:layout_constraintTop_toBottomOf="@+id/cl_diaSetUpDevice_deviceDataType" />

        <ProgressBar
            android:id="@+id/pg_diaSetUpDevice_progress"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:indeterminateTint="@color/material_blue_grey_80"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
