<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_200"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_itemWeighMac_name"
                style="@style/text_body_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="start"
                android:textColor="@color/black"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Name : BP Machine 1" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ll_itemWeighMac_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/mb_itemWeighMac_readValue"
                app:layout_constraintEnd_toStartOf="@+id/mb_itemWeighMac_readValue"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/mb_itemWeighMac_readValue">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_itemWeighMac_sysHolder"
                    style="@style/text_body_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="start"
                    android:paddingStart="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry"
                    android:text="@string/systolic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_itemWeighMac_sysValue"
                    style="@style/text_body_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toEndOf="@id/tv_itemWeighMac_sysHolder"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry"
                    tools:text="119" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_itemWeighMac_diaHolder"
                    style="@style/text_body_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="start"
                    android:paddingStart="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_itemWeighMac_sysHolder"
                    tools:ignore="RtlSymmetry"
                    android:text="@string/diastolic" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_itemWeighMac_diaValue"
                    style="@style/text_body_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toEndOf="@id/tv_itemWeighMac_sysHolder"
                    app:layout_constraintTop_toBottomOf="@id/tv_itemWeighMac_sysValue"
                    tools:ignore="RtlSymmetry"
                    tools:text="80" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_itemWeighMac_pulseHolder"
                    style="@style/text_body_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:gravity="start"
                    android:paddingStart="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_itemWeighMac_diaHolder"
                    tools:ignore="RtlSymmetry"
                    android:text="@string/pulse" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_itemWeighMac_pulseValue"
                    style="@style/text_body_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:paddingStart="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.8"
                    app:layout_constraintStart_toEndOf="@id/tv_itemWeighMac_sysHolder"
                    app:layout_constraintTop_toBottomOf="@id/tv_itemWeighMac_diaValue"
                    tools:ignore="RtlSymmetry"
                    tools:text="97" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_itemWeighMac_readValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="4dp"
                android:backgroundTint="@color/cardview_shadow_start_color"
                android:text="@string/read"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/ll_itemWeighMac_value"
                app:layout_constraintTop_toBottomOf="@id/tv_itemWeighMac_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>
